# fastapi-template

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: Dockerfile  main.py  manage.py  models.py  requirements.txt  schema.py
app/alembic/: env.py
app/api/v1/: business.py
app/api/v1/endpoints/: users.py
app/db/: __init__.py
app/endpoints/: root.py
migrations/: env.py
migrations/versions/: 481720caecbe.py
scripts/: docker-start.sh  wait-for-postgres.sh
service/: main.py
service/alembic/: env.py
service/db/: __init__.py
service/endpoints/: root.py
